log.txt
Polymorphism.java:16: error: ';' expected
        System.out.println("24")
                                ^
1 error
